Actualización variable a Date y gitignore

--- a/main/webapp/altausuario.xhtml
+++ b/main/webapp/altausuario.xhtml
@@ -22,9 +22,9 @@
             <p:outputLabel value="Sexo: "/>
             <p:inputText value="#{altaPersonaController.persona.sexo}"/>
             
-            <h:outputScript library="js" name="spanishcalendar.js"/>
+<!--            <h:outputScript library="js" name="spanishcalendar.js"/>
             <p:outputLabel value="Fecha de nacimiento: "/>
-            <p:outputLabel for="button" value="Button:"/>
+            <p:outputLabel for="button" value="Button:"/>-->
             <p:calendar id="button" value="#{altaPersonaController.persona.fechaNacimiento}" showOn="button"/>
                <!--
             
