--- a/webapp/index.xhtml
+++ b/webapp/index.xhtml
@@ -1,34 +1,15 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>¡Bienvenid@ a IKEA!</title>
+        <title>IKEA 2</title>
     </h:head>
     <h:body>
-        <p:growl id="mensajes" showDetail="true" life="2000" />
-
-        <h:form>
-
-            <p:panel header="Login" style="width:500px">
-                <h:panelGrid columns="2" cellpadding="5">
-                    <h:outputLabel for="username" value="Email: " />
-                    <p:inputText value="#{indexController.usuarioABuscar.email}" id="username"
-                                 required="true" label="username" />
-                    <h:outputLabel for="password" value="Contraseña: " />
-                    <p:password value="#{indexController.usuarioABuscar.password}" id="password" required="true"
-                                label="password" />
-                    <f:facet name="footer">
-                        <p:commandButton id="loginButton" value="Login" ajax="false"
-                                         action="#{indexController.verificarUsuario()}" update=":mensajes"/>
-                    </f:facet>
-                </h:panelGrid>
-            </p:panel>
-        </h:form>
-
-
+        Página de bienvenida
+       <h:button outcome="/publico/Principal.xhtml" value="Comenzar" />
+     
     </h:body>
 </html>
 
