--- a/webapp/publico/Registro.xhtml
+++ b/webapp/publico/Registro.xhtml
@@ -1,14 +1,17 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
-    <h:body>
 
-        <h:form>
+    <body>
+
+        <ui:composition template="./../WEB-INF/template/plantillaIkea.xhtml">
+
+            <ui:define name="content">
+                content
+                <h:form>
             <p:outputLabel value="Email: " for="txtEmail"/>
             <p:inputText value="#{usuariosController.usuario.email}" required="true" requiredMessage="Email es un campo obligatorio" id="txtEmail"></p:inputText>
             <p:message for="txtEmail"/>
@@ -35,7 +38,9 @@
            <p:commandButton value="registrar" actionListener="#{usuariosController.Guardar()}"></p:commandButton>
 
         </h:form>
+            </ui:define>
 
-    </h:body>
+        </ui:composition>
+
+    </body>
 </html>
-
