--- a/webapp/publico/Categoria.xhtml
+++ b/webapp/publico/Categoria.xhtml
@@ -13,7 +13,7 @@
                 <div class="p-ml-6" style="width: 90vw">
                     <div class="p-ml-6">
                         <h2 class="p-ml-6" style="font-size: 2.1rem">
-                            #nombre_categoría
+                            #{subcategoriasController.init()}
                         </h2>
                     </div>
                     <div class="p-grid p-ml-6">
