Vista perfil y muchos cambios

--- a/webapp/publico/Registro.xhtml
+++ b/webapp/publico/Registro.xhtml
@@ -222,7 +222,7 @@
                                     <div class="p-col">
                                         <div class="box">
                                             <p:commandButton id="registrarButton" value="Registrar" ajax="false"
-                                                             actionListener="#{registroController.insertarUsuario()}" style="width: 100%"/>
+                                                             action="#{registroController.insertarUsuario()}" style="width: 100%"/>
                                         </div>
                                     </div>
 
