--- a/webapp/privado/cliente/Cesta.xhtml
+++ b/webapp/privado/cliente/Cesta.xhtml
@@ -6,7 +6,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <body>
-        <ui:composition template="./../WEB-INF/template/plantillaIkea.xhtml">
+        <ui:composition template="../../WEB-INF/template/plantillaIkea.xhtml">
 
             <ui:define name="content">
                 <div class="p-grid p-jc-center p-mt-2">
