Mas cambios, en la cesta

--- a/webapp/privado/adminsitrador/Administracion.xhtml
+++ b/webapp/privado/adminsitrador/Administracion.xhtml
@@ -88,7 +88,7 @@
                             </h4>
                             <p:repeat value="#{adminListarTrabajadoresController.listaDeTrabajadores}" var="trabajador">
 
-                                <p:card>
+                                <p:card class="p-my-2">
                                     <h:form>
                                         <div class="ui-fluid p-formgrid p-grid">
                                             <div class="p-field p-mr-2">
