Actualización de productos en categoría y retoques

--- a/webapp/publico/Principal.xhtml
+++ b/webapp/publico/Principal.xhtml
@@ -51,7 +51,7 @@
                         
                             <p:repeat value="#{principalController.getCategorias()}" var="categoria">
                         <div class="p-col-2">
-                            <p:card class="p-text-nowrap">
+                            <p:card class="p-text-wrap">
                                 <f:facet name="header">
                                     <img alt="imagen" src="#{categoria.imageUrl}"/>
                                 </f:facet>
